# dpd2025

./: .gitignore  README.md  agent_gemini.py  agente_1.py  apple_stock_price.csv  preco_acoes.html  pyproject.toml
aula1/: agent_deepseek.py  agente_ollama.py
aula2/: agent_financeiro.py  agente_ollama_tools.py
aula3/: agente_rag1.py  playground.py
data/db/: doc_analizer.db  memory.db
tmp/lancedb/recipes.lance/_transactions/: 0-57adea93-3a77-417c-8bd7-60ebf556f049.txn  1-813dbd84-bad7-4665-8cc4-e9fb766d0aa0.txn  2-05e3627f-d4ca-42b3-bc4e-e5473784661a.txn  3-d734e3dc-7ce1-47c7-be8f-bb0a2e34ed97.txn  4-1e0ba9f3-54c7-4e61-8844-83cbb7f0ecde.txn  5-06616882-9079-45d8-a402-1c3cf85bd496.txn  6-c4008a76-a729-4a1e-9fa1-fb4ca444f778.txn  7-a5e355ea-a5f8-48a9-9086-3ae647acbabd.txn
tmp/lancedb/recipes.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest  7.manifest  8.manifest
tmp/lancedb/recipes.lance/data/: 30fab58b-bec6-4544-bc32-4de233b89d9c.lance  4b450e31-6e64-46c5-a1d0-4fd54e62e074.lance  5af24652-4cb3-412a-8d4f-c0b711bc8ead.lance  64c987c0-0c45-4a55-9105-69d2eb1fc689.lance  9d30bdb8-24d7-40dd-bc81-a16082cee97b.lance  9df88a6e-8b6e-4a71-85d2-d8e212d1ece6.lance  bb953c01-c488-4ba3-a7ba-3d3361294ee4.lance
