[project]
name = "produto-dados-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "agno>=1.7.0",
    "chromadb>=1.0.15",
    "ddgs>=9.2.3",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.24.0",
    "googlesearch-python>=1.3.0",
    "ipdb>=0.13.13",
    "jina>=3.34.0",
    "lancedb>=0.24.1",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pycountry>=24.6.1",
    "pylance>=0.31.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "tantivy>=0.24.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "notebook>=7.4.4",
]
